# labelbuddy-annotations

./: .buildinfo  .gitignore  CITATION.cff  LICENSE  Makefile  README.md  annotations_summary.html  app.py  contributing_to_this_repository.html  dash_app.py  genindex.html  how_to_use_the_data.html  index_info.py  number_of_participants.html  objects.inv  overview.html  participant_demographics.html  plot_n_participants.html  requirements.txt  search.html  searchindex.js  using_this_repository.html
_sources/: annotations_summary.py  contributing_to_this_repository.md  number_of_participants.ipynb  number_of_participants.md  overview.ipynb  overview.md  plot_n_participants.ipynb  plot_n_participants.md  using_this_repository.ipynb  using_this_repository.py
analysis/labelrepo/: setup.cfg
analysis/labelrepo/src/labelrepo/: __init__.py  _utils.py  database.py  datasets.py  dbutils.py  displays.py  documents.py  repo.py
analysis/labelrepo/src/labelrepo/_data/: initialize_db.sql
analysis/labelrepo/src/labelrepo/_data/css/: annotation-set.css  label-set.css
analysis/labelrepo/src/labelrepo/projects/nv_task/: __init__.py  _nv_task.py
analysis/labelrepo/src/labelrepo/projects/participant_demographics/: __init__.py  _interpreter.py  _participant_demographics.py  _watcher.py
analysis/labelrepo/src/labelrepo/projects/participant_demographics/_data/templates/: annotation_stack.html  annotation_stack_list.html  hide_show_annotations.js  labelbuddy_file_report.html  live_report.html  participant_tree.html  participants.css  report.html  repository_report.html
(+2403 files in other folders)
