[options]
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.package_data]
labelrepo._data =
    *
labelrepo._data.css =
    *
labelrepo.projects.participant_demographics._data =
    *
labelrepo.projects.participant_demographics._data.templates =
    *

[options.exclude_package_data]
* = __pycache__

[options.extras_require]
projects =
    pandas
    jinja2
    websockets
all =
    %(projects)s