[options]
packages = find:
package_dir =
    = src
install_requires =
    pandas
    jinja2
    websockets

[options.packages.find]
where = src

[options.package_data]
labelrepo._data =
    *
labelrepo._data.css =
    *
labelrepo.projects.participant_demographics._data =
    *
labelrepo.projects.participant_demographics._data.templates =
    *

[options.exclude_package_data]
* = __pycache__
